err/django-simple-rest.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_simple_rest-1.4.1.egg-info'...
Listing './lib/python3.5/site-packages/mimeparse-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simple_rest'...
Listing './lib/python3.5/site-packages/simple_rest/auth'...
Listing './lib/python3.5/site-packages/simple_rest/management'...
Listing './lib/python3.5/site-packages/simple_rest/management/commands'...
Compiling './lib/python3.5/site-packages/simple_rest/management/commands/urlencode.py'...
***   File "./lib/python3.5/site-packages/simple_rest/management/commands/urlencode.py", line 45
    print urllib.urlencode(data)
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/simple_rest/resource.py'...
***   File "./lib/python3.5/site-packages/simple_rest/resource.py", line 45
    except HttpError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/simple_rest/response.py'...
***   File "./lib/python3.5/site-packages/simple_rest/response.py", line 74
    except HttpError, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/simple_rest/utils'...
Compiling './lib/python3.5/site-packages/simple_rest/utils/serializers.py'...
***   File "./lib/python3.5/site-packages/simple_rest/utils/serializers.py", line 14
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
